[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Jade Lynn Masker <jadelynn@masker.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
conrod = { version = "*", features = ["glium", "winit"]}